; ModuleID = '/home/carl/AnghaBench/libgit2/tests/refs/extr_read.c_test_refs_read__loose_first.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/refs/extr_read.c_test_refs_read__loose_first.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

@g_repo = common dso_local global i32 0, align 4
@packed_head_name = common dso_local global i32 0, align 4
@packed_test_head_name = common dso_local global i32 0, align 4
@GIT_REFERENCE_DIRECT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_refs_read__loose_first() #0 {
  %1 = alloca %struct.TYPE_6__*, align 8
  %2 = load i32, i32* @g_repo, align 4
  %3 = load i32, i32* @packed_head_name, align 4
  %4 = call i32 @git_reference_lookup(%struct.TYPE_6__** %1, i32 %2, i32 %3)
  %5 = call i32 @cl_git_pass(i32 %4)
  %6 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %7 = call i32 @git_reference_free(%struct.TYPE_6__* %6)
  %8 = load i32, i32* @g_repo, align 4
  %9 = load i32, i32* @packed_test_head_name, align 4
  %10 = call i32 @git_reference_lookup(%struct.TYPE_6__** %1, i32 %8, i32 %9)
  %11 = call i32 @cl_git_pass(i32 %10)
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %13 = call i32 @git_reference_type(%struct.TYPE_6__* %12)
  %14 = load i32, i32* @GIT_REFERENCE_DIRECT, align 4
  %15 = and i32 %13, %14
  %16 = call i32 @cl_assert(i32 %15)
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %18 = call i64 @reference_is_packed(%struct.TYPE_6__* %17)
  %19 = icmp eq i64 %18, 0
  %20 = zext i1 %19 to i32
  %21 = call i32 @cl_assert(i32 %20)
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* @packed_test_head_name, align 4
  %26 = call i32 @cl_assert_equal_s(i32 %24, i32 %25)
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %28 = call i32 @git_reference_free(%struct.TYPE_6__* %27)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_reference_lookup(%struct.TYPE_6__**, i32, i32) #1

declare dso_local i32 @git_reference_free(%struct.TYPE_6__*) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32 @git_reference_type(%struct.TYPE_6__*) #1

declare dso_local i64 @reference_is_packed(%struct.TYPE_6__*) #1

declare dso_local i32 @cl_assert_equal_s(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
